[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
htmlentity = "0.1.0"
image = "0.24.6"
lazy_static = "1.4.0"
mail-parser = "0.8.2"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["stream"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rusqlite = "0.29.0"
serde = "1.0.159"
serde_json = "1.0.96"
